# mikrotik-mcp

./: .editorconfig  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  cspell.json  release-please-config.json
.cspell/: project-words.txt
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: client.rs  error.rs  main.rs  params.rs  server.rs
src/params/: dhcp.rs  dns.rs  firewall.rs  interfaces.rs  ip.rs  lte.rs  mod.rs  network.rs  shared.rs  system.rs
src/tools/: dhcp.rs  dns.rs  firewall.rs  interfaces.rs  ip.rs  lte.rs  mod.rs  network.rs  system.rs
