[package]
name = "mikrotik-mcp"
version = "0.2.0"
edition = "2024"
description = "MikroTik RouterOS MCP server (REST API)"
license = "MIT"
repository = "https://github.com/eljefedelrodeodeljefe/mikrotik-mcp"

[[bin]]
name = "mikrotik-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
